--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/addon-themes": "^8.0.8",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.372.0",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
