--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/addon-themes": "^8.0.8",
+    "antd": "^5.16.4",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.372.0",
