--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5",
     "tailwind-variants": "^0.2.1",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
